# optix_lidar_raycast

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  setup.py
include/: LaunchParams.h  LidarSimulator.h
python/: __init__.py  __init__.pyi  _optix_lidar_raycast.pyi  lidar_raycast.py  lidar_raycast.pyi
src/: LidarSimulator.cpp  closesthit.cu  miss.cu  python_binding.cpp  raygen.cu
tests/: test_benchmark.py  test_optix_lidar_raycast.py  test_optix_minimal.py  test_orientation_fix.py  test_package_integration.py
